--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-#App {
+.App {
   font-family: sans-serif;
   height: 100vh;
   display: flex;
@@ -68,7 +68,7 @@ button {
   margin-top: 25px;
 }
 
-.dark {
+#dark {
   background-color: black;
   color: white;
 }
